[Update] 클린코드 - 서비스 구현체가 아닌 인터페이스 주입, '.collect(Collectors.toList())' -> '.toList()' 대체